<!-- Copyright (C) 2016 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources>
    <!-- Title for the application. [CHAR LIMIT=12] -->
    <string name="app_name">Dictionary</string>

    <!-- Category name for phrases [CHAR LIMIT=20] -->
    <string name="category_phrases">Not Categorized Words</string>
    <string-array name="activities_names">
        <item>Numbers</item>
        <item>Family</item>
        <item>Colors</item>
        <item>Stuff</item>
    </string-array>
    <!-- Category name for the vocabulary words for colors [CHAR LIMIT=20] -->
    <string name="category_colors">Colors</string>
    <string name="email_auth">Email</string>
    <string name="password_auth">Password</string>
    <string name="login_btn_text">Login</string>
    <string name="login_failed">Login Failed</string>
    <!-- Category name for the vocabulary words for numbers [CHAR LIMIT=20] -->
    <string name="category_numbers">Numbers</string>

    <!-- Category name for the vocabulary words for family members [CHAR LIMIT=20] -->
    <string name="category_family">Family Members</string>
    <string name="russian_word">Russian word</string>
    <string name="english_word">English word</string>
    <string name="add_word">add word</string>
    <string name="title_activity_login">Sign in</string>
    <string name="register_process_text">We\'re registering you..</string>
    <string name="login_process_text">We\'re logging you in..</string>
    <string name="just_a_moment">Just a moment</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="register_text_view">Don\'t have an account?</string>
    <string name="register_btn">Register</string>
    <string name="settings">Settings</string>
    <string name="enter_your_email_here">Enter your email here</string>
    <string name="send_reset_link">Send reset link</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="log_out">Log out</string>
    <string name="word_added">Word added succesfully!</string>
    <string name="word_not_added">Word wasn\'t added, try again</string>
    <string name="registered_succesfully">Registered successfully!</string>
    <string name="registration_failed">Registration failed</string>
    <string name="empty_fields_warning">Fill in necessary fields</string>
    <string name="delete_word">Delete Word</string>
    <string name="edit_word">Edit Word</string>
    <string name="word_deleted">Word was successfully deleted!</string>
    <string name="edit_btn_value">Edit</string>
    <string name="word_edited_succesfully">Word was edited succesfilly!</string>
    <string name="add_new_category">Add</string>
    <string name="new_category_added">Category succesfully added!</string>
    <string name="something_went_wrong">Something went wrong, please try again</string>
    <string name="must_enter_category_name">You must enter category name</string>
    <string name="email_sent">Email was sent</string>
    <string name="enter_valid_email" />
    <string name="category_deleted">Category was successfully deleted!</string>
    <string name="delete_category">Delete Category</string>
    <string name="new_category">Add Category</string>
</resources>
